文件服务添加webp支持